--- a/index.html
+++ b/index.html
@@ -36,50 +36,189 @@
         </div>
       </div>
     </div>
-    <div class="container doFlexBetween m-5">
-      <div class="leftContent">
-        <span class="h4">Product Growth Solution in Single Platform.</span>
-        <span class="h1">Managing business payments has never been easier</span>
+    <div class="hero">
+      <div class="contentLeft">
+        <span class="heroHeading"
+          >Product Growth Solution in Single Platform.</span
+        >
+        <span class="heroTitle"
+          >Managing business payments has never been easier</span
+        >
         <span class="p"
           >Never at water me might. On formed merits hunted unable merely by mr
           whence or. Possession the unpleasing simplicity her uncommonly.</span
         >
-        <button class="btnGreen m-5 btnFont">Try for free</button>
+        <button class="btnGreen btnFont">Try for free</button>
         <div class="counter">
-          <div class="countLeft">
-            <span class="aboutTitle">195k+ Users</span>
-            <span class="about">
+          <div class="countRight">
+            <span class="countTitle">195k+ Users</span>
+            <span class="countCaption">
               Delightful remarkably mr on announcing themselves entreaties
               favourable.
             </span>
           </div>
-          <div class="countRight">
-            <span class="aboutTitle">$400m+ Saved</span>
-            <span class="about">
+          <div class="countLeft">
+            <span class="countTitle">$500m+ Saved</span>
+            <span class="countCaption">
               About to in so terms voice at. Equal an would is found seems of
               and concluded.
             </span>
           </div>
         </div>
       </div>
-      <div class="rightContent">
-        <div class="svgContainer">
-          <img src="section1.svg" class="svgImg1" alt="" />
+      <div class="contentRight">
+        <div class="heroRightInnterContainer">
+          <img src="section1.svg" class="svg1" alt="" />
           <img src="svg2.svg" alt="" class="svgImg2" />
+          <div class="profileContainer">
+            <div class="profile1">
+              <div class="profileInfo">
+                <img src="profile.svg" alt="" />
+                <div class="profileDetails">
+                  <span class="surname">Angela Taylor</span>
+                  <span class="name">Completed task</span>
+                </div>
+              </div>
+              <div class="profileTime">
+                <span class="time1">12:54pm today</span>
+              </div>
+            </div>
+            <div class="profile1">
+              <div class="profileInfo">
+                <img src="profile.svg" alt="" />
+                <div class="profileDetails">
+                  <span class="surname">Angela Taylor</span>
+                  <span class="name">Completed task</span>
+                </div>
+              </div>
+              <div class="profileTime">
+                <span class="time2">For 3 days</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <img src="boxlogo/vector2.svg" class="vector2" alt="" />
+        <img src="boxlogo/vector.svg" class="vector1" alt="" />
+      </div>
+    </div>
+
+    <div class="container m-5 section" style="text-align: center">
+      <span class="h4"
+        >Over 32k+ software businesses growing with AR Shakir</span
+      >
+      <div class="logoContainer m-5">
+        <img src="logo1.svg" alt="" />
+        <img src="logo2.svg" alt="" />
+        <img src="logo3.svg" alt="" />
+        <img src="logo4.svg" alt="" />
+        <img src="logo5.svg" alt="" />
+        <img src="logo6.svg" alt="" />
+        <img src="logo7.svg" alt="" />
+      </div>
+    </div>
+
+    <div class="container f-c m-10 bg fdColumn dCenter dFlex dAlignCenter">
+      <span class="fs-3">OUR SERVICES</span>
+      <span class="h2 fw-1"
+        >Save Time Managing Your Business With Our Best Services</span
+      >
+      <div class="container dFlex dAlignCenter dCenter fWrap g-5 rg-5 m-5">
+        <div class="serviceCard">
+          <div class="boxLogo"><img src="boxlogo/1.svg" alt="" /></div>
+          <span class="m-5 boxTitle">Project Management</span>
+          <span class="caption">170+ options available</span>
+        </div>
+        <div class="serviceCard">
+          <div class="boxLogo"><img src="boxlogo/2.svg" alt="" /></div>
+          <span class="m-5 boxTitle">Web & Mobile Developement</span>
+          <span class="caption">170+ options available</span>
+        </div>
+        <div class="serviceCard">
+          <div class="boxLogo"><img src="boxlogo/3.svg" alt="" /></div>
+          <span class="m-5 boxTitle"> Customer Support</span>
+          <span class="caption">170+ options available</span>
+        </div>
+        <div class="serviceCard">
+          <div class="boxLogo"><img src="boxlogo/4.svg" alt="" /></div>
+          <span class="m-5 boxTitle">Human Resources</span>
+          <span class="caption">170+ options available</span>
+        </div>
+        <div class="serviceCard">
+          <div class="boxLogo"><img src="boxlogo/5.svg" alt="" /></div>
+          <span class="m-5 boxTitle">Design & Creatives</span>
+          <span class="caption">170+ options available</span>
+        </div>
+        <div class="serviceCard">
+          <div class="boxLogo"><img src="boxlogo/6.svg" alt="" /></div>
+          <span class="m-5 boxTitle">Marketing & Communication</span>
+          <span class="caption">170+ options available</span>
+        </div>
+        <div class="serviceCard">
+          <div class="boxLogo"><img src="boxlogo/7.svg" alt="" /></div>
+          <span class="m-5 boxTitle">Business Development</span>
+          <span class="caption">170+ options available</span>
+        </div>
+        <div class="serviceCard">
+          <div class="boxLogo">+4</div>
+          <span class="boxTitle">More</span>
+          <span class="caption">170+ options available</span>
         </div>
       </div>
     </div>
 
-    <div class="container m-5" style="text-align: center;">
-      <span class="h4" >Over 32k+ software  businesses growing with AR Shakir</span>
-      <div class="logoContainer m-5">
-          <img src="logo1.svg" alt="">
-          <img src="logo2.svg" alt="">
-          <img src="logo3.svg" alt="">
-          <img src="logo4.svg" alt="">
-          <img src="logo5.svg" alt="">
-          <img src="logo6.svg" alt="">
-          <img src="logo7.svg" alt="">
+    <div class="container process">
+      <img src="fly.svg" alt="" />
+      <span class="processTitle">Learn More About Process</span>
+      <span class="processCaption"
+        >Was are delightful solicitude discovered collecting man day. Resolving
+        neglected sir tolerably.</span
+      >
+    </div>
+
+    <div class="processSteps">
+      <img src="boxlogo/vector5.svg" class="line1" alt="">
+      <img src="boxlogo/vector6.svg" alt="" class="line2">
+      <div class="step">
+        <div class="badge">1</div>
+        <div class="circle">
+          <div class="innerCircle">
+            <i class="fa-solid fa-user icon"></i>
+          </div>
+        </div>
+        <div class="stepDetail">
+          <span class="stepTitle">Register</span>
+          <span class="stepInfo"
+          >It more shed went up is roof if loud case. Delay music in lived
+          noise an.
+        </span>
+      </div>
+    </div>
+    <div class="step">
+      <div class="badge">2</div>
+      <div class="circle">
+        <img src="boxlogo/vector3.svg" alt="">
+        <div class="round"></div>
+      </div>
+      <div class="stepDetail">
+        <span class="stepTitle">Complete Setup</span>
+        <span class="stepInfo"
+        >Beyond genius really enough passed is up. Up maids me an ample
+        stood given.
+      </span>
+    </div>
+  </div>
+  <div class="step">
+    <div class="badge">3</div>
+    <div class="circle">
+          <img src="boxlogo/vector4.svg" alt="">
+        </div>
+        <div class="stepDetail">
+          <span class="stepTitle">Utilize App</span>
+          <span class="stepInfo"
+            >Certainty say suffering his him collected intention promotion. Hill
+            sold ham men.
+          </span>
+        </div>
       </div>
     </div>
   </body>
