--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="footer.css" />
   </head>
   <body>
     <img src="bg.svg" class="svg" alt="" />
-    <div class="container">
+    <header class="container">
       <div class="navbar">
         <div class="left">
           <span class="logo">Danial Habib</span>
@@ -35,8 +36,8 @@
           <button class="btnStart">Start Free</button>
         </div>
       </div>
-    </div>
-    <div class="hero">
+    </header>
+    <section class="hero">
       <div class="contentLeft">
         <span class="heroHeading"
           >Product Growth Solution in Single Platform.</span
@@ -73,7 +74,7 @@
           <div class="profileContainer">
             <div class="profile1">
               <div class="profileInfo">
-                <img src="profile.svg" alt="" />
+                <img src="profile.svg" alt="" class="profileImage" />
                 <div class="profileDetails">
                   <span class="surname">Angela Taylor</span>
                   <span class="name">Completed task</span>
@@ -85,7 +86,7 @@
             </div>
             <div class="profile1">
               <div class="profileInfo">
-                <img src="profile.svg" alt="" />
+                <img src="profile.svg" alt="" class="profileImage" />
                 <div class="profileDetails">
                   <span class="surname">Angela Taylor</span>
                   <span class="name">Completed task</span>
@@ -100,9 +101,9 @@
         <img src="boxlogo/vector2.svg" class="vector2" alt="" />
         <img src="boxlogo/vector.svg" class="vector1" alt="" />
       </div>
-    </div>
+    </section>
 
-    <div class="container m-5 section" style="text-align: center">
+    <section class="container m-5 section" style="text-align: center">
       <span class="h4"
         >Over 32k+ software businesses growing with AR Shakir</span
       >
@@ -115,9 +116,9 @@
         <img src="logo6.svg" alt="" />
         <img src="logo7.svg" alt="" />
       </div>
-    </div>
+    </section>
 
-    <div class="container f-c m-10 bg fdColumn dCenter dFlex dAlignCenter">
+    <section class="container f-c m-10 bg fdColumn dCenter dFlex dAlignCenter">
       <span class="fs-3">OUR SERVICES</span>
       <span class="h2 fw-1"
         >Save Time Managing Your Business With Our Best Services</span
@@ -164,20 +165,20 @@
           <span class="caption">170+ options available</span>
         </div>
       </div>
-    </div>
+    </section>
 
-    <div class="container process">
+    <section class="container process">
       <img src="fly.svg" alt="" />
       <span class="processTitle">Learn More About Process</span>
       <span class="processCaption"
         >Was are delightful solicitude discovered collecting man day. Resolving
         neglected sir tolerably.</span
       >
-    </div>
+    </section>
 
-    <div class="processSteps">
-      <img src="boxlogo/vector5.svg" class="line1" alt="">
-      <img src="boxlogo/vector6.svg" alt="" class="line2">
+    <section class="processSteps">
+      <!-- <img src="boxlogo/vector5.svg" class="line1" alt="">
+      <img src="boxlogo/vector6.svg" alt="" class="line2"> -->
       <div class="step">
         <div class="badge">1</div>
         <div class="circle">
@@ -188,29 +189,29 @@
         <div class="stepDetail">
           <span class="stepTitle">Register</span>
           <span class="stepInfo"
-          >It more shed went up is roof if loud case. Delay music in lived
-          noise an.
-        </span>
+            >It more shed went up is roof if loud case. Delay music in lived
+            noise an.
+          </span>
+        </div>
       </div>
-    </div>
-    <div class="step">
-      <div class="badge">2</div>
-      <div class="circle">
-        <img src="boxlogo/vector3.svg" alt="">
-        <div class="round"></div>
+      <div class="step">
+        <div class="badge">2</div>
+        <div class="circle">
+          <img src="boxlogo/vector3.svg" alt="" />
+          <div class="round"></div>
+        </div>
+        <div class="stepDetail">
+          <span class="stepTitle">Complete Setup</span>
+          <span class="stepInfo"
+            >Beyond genius really enough passed is up. Up maids me an ample
+            stood given.
+          </span>
+        </div>
       </div>
-      <div class="stepDetail">
-        <span class="stepTitle">Complete Setup</span>
-        <span class="stepInfo"
-        >Beyond genius really enough passed is up. Up maids me an ample
-        stood given.
-      </span>
-    </div>
-  </div>
-  <div class="step">
-    <div class="badge">3</div>
-    <div class="circle">
-          <img src="boxlogo/vector4.svg" alt="">
+      <div class="step">
+        <div class="badge">3</div>
+        <div class="circle">
+          <img src="boxlogo/vector4.svg" alt="" />
         </div>
         <div class="stepDetail">
           <span class="stepTitle">Utilize App</span>
@@ -220,6 +221,96 @@
           </span>
         </div>
       </div>
-    </div>
+    </section>
+
+    <section class="appContainer">
+      <span class="appHeading">PROJECT MANAGEMENT APP</span>
+      <span class="appTitle"
+        >Download our app and start your free trail to get started today!</span
+      >
+      <span class="appCaption"
+        >End-to-end payments and financial management in a single
+        solution.</span
+      >
+      <div class="buttons">
+        <button class="btnApple">
+          <i class="fa-brands fa-apple"></i> playstore
+        </button>
+        <div class="btnAndroid">
+          <i class="fa-brands fa-google-play"></i> Google Play
+        </div>
+      </div>
+    </section>
+
+    <section class="aboutSection">
+      <div class="aboutLeft">
+        <div class="aboutCard">
+          <img src="boxlogo/vectore7.svg" class="vectore7" alt="" />
+          <img src="lady.svg" class="lady" alt="" />
+          <img src="boxlogo/card.svg" class="imgCard" alt="" />
+          <img src="boxlogo/vectore8.svg" class="vectore8" alt="" />
+        </div>
+      </div>
+      <div class="aboutRight">
+        <div class="aboutChild">
+          <h1 class="aboutTitle">
+            My little garret repair to desire he esteem.
+          </h1>
+          <p class="aboutCaption">
+            Just like we said before, we have tons of features that will helps
+            you to manage you wallet. From income, outcome, montly usage, and
+            etc.
+          </p>
+          <button class="btnGreen btnFont" id="btnGreen">Try for free</button>
+        </div>
+      </div>
+    </section>
+
+    <section class="memberShipSection">
+      <img src="boxlogo/memberShipBg.svg" class="mBG" alt="">
+      <div class="memberShipContainer">
+        <div class="memberShipHeader">
+          <h1 class="memberShipTitle">
+            Start today, with free or premium plan, you choose
+          </h1>
+          <p class="memberShipCaption">
+            With lots of unique and useful features, you can easily manage your
+            wallet easily without any problem.
+          </p>
+        </div>
+        <div class="memberShipCards">
+          <div class="memberShipCardLeft">
+            <span class="mTitlemain">BASIC PLAN</span>
+            <div>
+              <span class="mTitle">$0</span>
+              <span class="mtitleMonth">Per Month</span>
+              <p class="mCardCaption">
+                Joy horrible moreover man feelings own shy. Request norland
+                neither mistake for yet. Between the for morning assured.
+              </p>
+              <div class="line"></div>
+              <img src="boxlogo/chkbox.svg" class="chkbox" alt="">
+              <button class="btnJoin">Join for free</button>
+            </div>
+          </div>
+          <div class="memberShipCardRight">
+            <span class="mTitlemain white">PREMIUM PLAN</span>
+            <div>
+              <span class="mTitle white" >$49</span>
+              <span class="mtitleMonth white">Per Month</span>
+              <p class="mCardCaption white">
+                On even feet time have an no at. Relation so in confined smallest children unpacked delicate. Why sir end believe.
+              </p>
+              <div class="line"></div>
+              <img src="boxlogo/checkboxright.svg" class="chkbox" alt="">
+              <button class="btnJoin  bgwhite">Get the Primium</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+
+    </footer>
   </body>
 </html>
