--- a/index.html
+++ b/index.html
@@ -17,28 +17,46 @@
 
 <body>
     <img src="bg.svg" class="svg" alt="" />
+    <aside class="mobileSidebar" id="sidebar">
+        <i class="fa fa-close " id="close" onclick="handleSidebar()"></i>
+        <div class="mobileNavlink">
+            <span class="navLink"><a href="#home" onclick="handleSidebar()">Home</a></span>
+            <span class="navLink"><a href="#services" onclick="handleSidebar()">Services</a></span>
+            <span class="navLink"><a href="#process" onclick="handleSidebar()">Process</a></span>
+            <span class="navLink"><a href="#download" onclick="handleSidebar()">Download</a></span>
+            <span class="navLink"><a href="#membership" onclick="handleSidebar()">Membership</a></span>
+            <span class="navLink"><a href="#feedback" onclick="handleSidebar()">Feed Back</a></span>
+        </div>
+        <div class="sidebarBtns">
+            <span class="text">Sign In</span>
+            <button class="btnStart">Start Free</button>
+        </div>
+    </aside>
     <header class="container navCenter">
         <div class="navbar">
             <div class="left">
                 <span class="logo">Danial Habib</span>
             </div>
             <div class="center">
-                <span class="navLink">
-                    Product <i class="fa-solid fa-chevron-down"></i>
-                </span>
-                <span class="navLink">
-                    Template <i class="fa-solid fa-chevron-down"></i>
-                </span>
-                <span class="navLink">Blog</span>
-                <span class="navLink">Pricing</span>
+                <span class="navLink"><a href="#home">Home</a></span>
+                <span class="navLink"><a href="#services">Services</a></span>
+                <span class="navLink"><a href="#process">Process</a></span>
+                <span class="navLink"><a href="#download">Download</a></span>
+                <span class="navLink"><a href="#membership">Membership</a></span>
+                <span class="navLink"><a href="#feedback">Feed Back</a></span>
             </div>
             <div class="right">
                 <span class="text">Sign In</span>
                 <button class="btnStart">Start Free</button>
             </div>
+
+            <div class="menuIcon">
+                <i class="fa-solid fa-bars menu" id="menu" onclick="handleSidebar()"></i>
+            </div>
         </div>
     </header>
-    <section class="hero">
+
+    <section class="hero "  id="home">
         <div class="contentLeft">
             <span class="heroHeading">Product Growth Solution in Single Platform.</span>
             <span class="heroTitle">Managing business payments has never been easier</span>
@@ -111,7 +129,7 @@
         </div>
     </section>
 
-    <section class="cardContainer f-c m-10 bg fdColumn dCenter dFlex dAlignCenter">
+    <section class="cardContainer f-c m-10 bg fdColumn dCenter dFlex dAlignCenter" id="services" >
         <span class="fs-3">OUR SERVICES</span>
         <span class="h2 fw-1">Save Time Managing Your Business With Our Best Services</span>
         <div class="container dFlex dAlignCenter dCenter fWrap g-5 rg-5 m-5">
@@ -158,7 +176,7 @@
         </div>
     </section>
 
-    <section class="container process">
+    <section class="container process" id="process">
         <img src="fly.svg" alt="" />
         <span class="processTitle">Learn More About Process</span>
         <span class="processCaption">Was are delightful solicitude discovered collecting man day. Resolving
@@ -207,7 +225,7 @@
         </div>
     </section>
 
-    <section class="appContainer">
+    <section class="appContainer" id="download">
         <span class="appHeading">PROJECT MANAGEMENT APP</span>
         <span class="appTitle">Download our app and start your free trail to get started today!</span>
         <span class="appCaption">End-to-end payments and financial management in a single
@@ -222,7 +240,7 @@
         </div>
     </section>
 
-    <section class="aboutSection">
+    <section class="aboutSection" id="about">
         <div class="aboutLeft">
             <div class="aboutCard">
                 <img src="boxlogo/vectore7.svg" class="vectore7" alt="" />
@@ -246,7 +264,7 @@
         </div>
     </section>
 
-    <section class="memberShipSection">
+    <section class="memberShipSection" id="membership">
         <img src="boxlogo/memberShipBg.svg" class="mBG" alt="">
         <div class="memberShipContainer">
             <div class="memberShipHeader">
@@ -291,7 +309,7 @@
             </div>
     </section>
 
-    <section class="feedbackSection">
+    <section class="feedbackSection" id="feedback">
         <h4 class="feedbackHeading4">Testimonials</h4>
         <h1 class="feedbackTitle">Check what our clients are saying</h1>
         <div class="feedBackCards">
@@ -389,6 +407,14 @@
 
 
     <img src="boxlogo/ellips.svg" class="ellips" alt="">
+    <script>
+
+   function handleSidebar() {
+       let sidebar = document.getElementById("sidebar")
+       sidebar.classList.toggle("open")
+   }
+        
+    </script>
 </body>
 
 </html>
