--- a/index.html
+++ b/index.html
@@ -316,8 +316,10 @@
             <div class="feedBackLeft">
                 <div class="feedbackProfile">
                     <img src="boxlogo/pattern.svg" class="patternFeedBACK" alt="">
+                    <img src="boxlogo/top.svg" class="topVectore" alt="">
+                    <img src="boxlogo/bottom.svg" class="bottomVectore" alt="">
                     <div class="cardFeedBack" id="card">
-
+                        
                     </div>
                     <div class="btnCircle" id="previus"><i id="i" class="fa fa-angle-left"
                             onclick="handlePrevieus()"></i> </div>
@@ -421,7 +423,7 @@
     <img src="boxlogo/ellips.svg" class="ellips" alt="">
     <script>
         let i = 0;
-        let arr = ["array/0.svg", "array/1.png", "array/2.png", "array/3.png"]
+        let arr = ["array/0.svg", "array/1.png", "array/2.png", "array/3.png" , "array/4.png" , "array/5.png" , "array/6.png", "array/7.png"]
         let lady = document.getElementById("card");
         lady.innerHTML = `<img src=${arr[i]} class="animate ladyFeedBack" id="image"  alt="">`
         function toggleButtons(index) {
