--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <span class="heroTitle">Managing business payments has never been easier</span>
             <span class="p">Never at water me might. On formed merits hunted unable merely by mr
                 whence or. Possession the unpleasing simplicity her uncommonly.</span>
-            <button class="btnGreen btnFont">Try for free</button>
+            <button class="btnGreen btnFont" id="free">Try for free</button>
             <div class="counter">
                 <div class="countRight">
                     <span class="countTitle">195k+ Users</span>
@@ -321,9 +321,9 @@
                     <div class="cardFeedBack" id="card">
                         
                     </div>
-                    <div class="btnCircle" id="previus"><i id="i" class="fa fa-angle-left"
-                            onclick="handlePrevieus()"></i> </div>
-                    <div class="btnCircle" id="next"> <i id="i" class="fa fa-angle-right" onclick="handleNext()"></i>
+                    <div class="btnCircle" id="previus" onclick="handlePrevieus()"><i id="i" class="fa fa-angle-left"
+                            ></i> </div>
+                    <div class="btnCircle" id="next" onclick="handleNext()"> <i id="i" class="fa fa-angle-right" ></i>
                     </div>
                     <img src="boxlogo/curve.svg" class="feedBackCurve" alt="">
 
