--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
     <section class="container process" id="process">
         <img src="fly.svg" alt="" />
-        <span class="processTitle">Learn More About Process</span>
+        <span class="processTitle heading">Learn More About Process</span>
         <span class="processCaption">Was are delightful solicitude discovered collecting man day. Resolving
             neglected sir tolerably.</span>
     </section>
@@ -318,8 +318,10 @@
                     <img src="boxlogo/pattern.svg" class="patternFeedBACK" alt="">
                     <img src="boxlogo/top.svg" class="topVectore" alt="">
                     <img src="boxlogo/bottom.svg" class="bottomVectore" alt="">
-                    <div class="cardFeedBack" id="card">
-                        
+                    <div class="cardFeedBack" >
+                        <div class="hy" id="card">
+
+                        </div>
                     </div>
                     <div class="btnCircle" id="previus" onclick="handlePrevieus()"><i id="i" class="fa fa-angle-left"
                             ></i> </div>
