--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
         </div>
     </section>
 
-    <section class="cardContainer f-c m-10 bg fdColumn dCenter dFlex dAlignCenter" id="services">
+    <section class="cardContainer f-c m-10 fdColumn dCenter dFlex dAlignCenter" id="services">
+        <img src="vector.svg" class="bgCard" alt="">
         <span class="fs-3">OUR SERVICES</span>
         <span class="h2 fw-1">Save Time Managing Your Business With Our Best Services</span>
         <div class="container dFlex dAlignCenter dCenter fWrap g-5 rg-5 m-5">
@@ -168,7 +169,7 @@
                 <span class="m-5 boxTitle">Business Development</span>
                 <span class="caption">170+ options available</span>
             </div>
-            <div class="serviceCard">
+            <div class="serviceCard greenCard">
                 <div class="boxLogo">+4</div>
                 <span class="boxTitle">More</span>
                 <span class="caption">170+ options available</span>
@@ -231,12 +232,12 @@
         <span class="appCaption">End-to-end payments and financial management in a single
             solution.</span>
         <div class="buttons">
-            <button class="btnApple">
+            <button class="btn btnApple">
                 <i class="fa-brands fa-apple"></i> playstore
             </button>
-            <div class="btnAndroid">
+            <button class="btn btnAndroid greenCard">
                 <i class="fa-brands fa-google-play"></i> Google Play
-            </div>
+            </button>
         </div>
     </section>
 
@@ -291,7 +292,7 @@
                         <button class="btnJoin">Join for free</button>
                     </div>
                 </div>
-                <div class="memberShipCardRight">
+                <div class="memberShipCardRight greenCard">
                     <div class="choiceBadge">Best Choice</div>
                     <span class="mTitlemain white">PREMIUM PLAN</span>
                     <div>
