--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
 
     <section class="processSteps">
         <div class="step">
+            <!-- <img src="boxlogo/leftCurv.svg" alt="" class="leftCurve"> -->
             <div class="badge">1</div>
             <div class="circle">
                 <div class="innerCircle">
@@ -213,6 +214,7 @@
             </div>
         </div>
         <div class="step">
+            <!-- <img src="boxlogo/rightCurve.svg" alt="" class="rigthCurve"> -->
             <div class="badge">3</div>
             <div class="circle">
                 <img src="boxlogo/vector4.svg" alt="" />
